--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "terraform"]
 	path = terraform
 	url = git@github.com:cosandr/terraform.git
+[submodule "ansible"]
+	path = ansible
+	url = git@github.com:cosandr/ansible.git
