--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ansible"]
 	path = ansible
 	url = git@github.com:cosandr/ansible.git
+[submodule "network"]
+	path = network
+	url = git@github.com:cosandr/network.git
