--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "network"]
 	path = network
 	url = git@github.com:cosandr/network.git
+[submodule "ansible-role-skeleton"]
+	path = ansible-role-skeleton
+	url = git@github.com:cosandr/ansible-role-skeleton.git
